@@ -28,6 +28,8 @@
  - Mod: Profanity filtering is more clear.
  - Add: Shared admin notes on empires
  - Mod: Oracle cooldown on BHG movement shortened to a flat 5 minutes.
+ - Mod: BHG Neutralization does not effect own alliance.
+ - Mod: BHG Can no longer swap with seized hostiles.
 
 3.0908:
  - Mod: trash_messages_where now defaults to not returning deleted message IDs.
